--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'robolectric'
+apply plugin: 'org.robolectric'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
@@ -33,13 +33,6 @@ android {
 
     lintOptions {
         abortOnError false
-    }
-
-    sourceSets {
-        // Move the tests to test/java, test/res, etc...
-        androidTest {
-            java.srcDirs = ['src/test/java']
-        }
     }
 }
 
@@ -93,7 +86,6 @@ task jacocoTestReport(type: JacocoReport) {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.android.support:cardview-v7:22.0.0'
@@ -102,9 +94,18 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.google.android.gms:play-services-analytics:7.0.0'
-    androidTestCompile 'org.robolectric:robolectric:2.4',
-            'com.squareup.assertj:assertj-android:1.0.0',
-            'com.squareup.assertj:assertj-android-support-v4:1.0.0',
+    testCompile fileTree(dir: "${rootProject.projectDir}/libs", include: ['*.jar'])
+    testCompile 'junit:junit:4.12',
             'org.mockito:mockito-core:1.9.5+',
-            'junit:junit:4.11'
+            'org.assertj:assertj-core:1.6.0'
+    testCompile('org.robolectric:robolectric:2.4') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
+//    compile('com.squareup.assertj:assertj-android:1.0.0') {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    }
+//    compile('com.squareup.assertj:assertj-android-support-v4:1.0.0') {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    }
 }
